fix: visualization abstraction classes

--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
     "datatables.net-responsive-bs4": "^3.0.0",
     "datatables.net-searchpanes-bs4": "^2.3.0",
     "jszip": "^3.10.1",
-    "pdfmake": "^0.2.9",
     "next": "14.0.4",
+    "pdfmake": "^0.2.9",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/pdfmake": "^0.2.9",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
