--- a/package.json
+++ b/package.json
@@ -16,13 +16,15 @@
     "datatables.net-buttons-bs4": "^3.0.0",
     "datatables.net-responsive-bs4": "^3.0.0",
     "datatables.net-searchpanes-bs4": "^2.3.0",
+    "jquery": "^3.5.1",
     "jszip": "^3.10.1",
-    "next": "14.0.4",
+    "next": "14.1.0",
     "pdfmake": "^0.2.9",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/jquery": "^3.5.29",
     "@types/node": "^20",
     "@types/pdfmake": "^0.2.9",
     "@types/react": "^18",
